--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -56,8 +56,15 @@ a li{
   font-family: Verdana;
 }
 .animal-tables .table {
+    padding-bottom: 20px;
     border: 2px solid black;
     margin: 10px 0px;
+}
+.table table tr th{
+  padding: 5px;
+}
+.table table tr td{
+  padding: 2px 5px;
 }
 .product-tables{
   background-color: #ada;
@@ -65,6 +72,7 @@ a li{
   margin: 0;
 }
 .product-tables .table{
+  padding-bottom: 20px;
   border: 2px solid black;
   margin: 10px 0px;
 }
@@ -73,13 +81,14 @@ a li{
   font-family: Verdana;
 }
 .machine-tables .table{
+  padding-bottom: 20px;
   border: 2px solid black;
   margin: 10px 0px;
 }
 .primary-btn{
   border: 2px solid black;
   border-radius: 1em;
-  padding: 5px 10px;
+  padding: 2px 10px;
 }
 .footer-container{
   display: flex;
